<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:gravity="center"
    android:padding="2dp"
    tools:context=".Pop">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/sche_day"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />


    <Spinner
        android:id="@+id/fill_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fill_day"
        android:text="@string/sche_time"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/lay_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView3">

        <EditText
            android:id="@+id/fill_startTime"
            android:layout_height="wrap_content"
            android:hint="@string/sche_start"
            android:ems="10"
            android:inputType="time"
            tools:targetApi="o"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sche_to"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fill_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="end"
            android:ems="10"
            android:inputType="time"
            tools:targetApi="o" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/sche_activity"
        android:layout_below="@+id/lay_time"
        android:textSize="20sp"
        tools:ignore="NotSibling,UnknownId"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/fill_acti"
        android:layout_height="wrap_content"
        android:hint="@string/fill_activity"
        android:ems="10"
        android:inputType="text"
        tools:targetApi="o"
        android:layout_width="wrap_content"
        android:layout_below="@+id/textView7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/btnadd"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:onClick="addNewSchedule"
            android:text="@string/add" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/close" />
    </LinearLayout>


</RelativeLayout>